@@ -354,7 +354,7 @@ AC_ARG_ENABLE(cursor-blink,
   fi])
 
 AC_ARG_ENABLE(text-blink,
-  [  --enable-text-blink   enable blinking text],
+  [  --enable-text-blink     enable blinking text],
   [if test x$enableval = xyes -o x$enableval = xno; then
     support_text_blink=$enableval
   fi])
@@ -1196,7 +1196,7 @@ fi
 if test x$support_cursor_blink = xyes; then
   AC_DEFINE(CURSOR_BLINK, 1, Define if you want blinking cursor support)
 fi
-if test x$support_test_blink = xyes; then
+if test x$support_text_blink = xyes; then
   AC_DEFINE(TEXT_BLINK, 1, Define if you want blinking text support)
 fi
 if test x$support_unicode3 = xyes; then
